...
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/all_tasks"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/MainButtonAddTask"
        app:layout_constraintTop_toBottomOf="@+id/MainRV"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/MainButtonAddTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
