...
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_task">My Task</string>
    <string name="my_desc">My Desc</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="upload_image">Upload Image</string>
    <string name="pick_a_team">Pick a Team</string>
...
